Feature: Enhance environment configuration and validation with new scripts and tests

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,14 +1,30 @@
+# Environment Configuration
+# Copy this file to .env and fill in your values
+
+# Server Configuration
 PORT=3005
 
+# Database Configuration (Required)
+# Get from: https://neon.tech
+# Example: postgresql://user:password@host.neon.tech/dbname?sslmode=require
 DATABASE_URL=<your_database_url>
 
+# Better Auth Configuration (Required)
+# Generate a secure random string (min 32 characters)
+# Example: openssl rand -base64 32
 BETTER_AUTH_SECRET=<better_auth_secret>
 BETTER_AUTH_URL=http://localhost:3005
 
+# GitHub OAuth Configuration (Required)
+# Get from: https://github.com/settings/developers
 GITHUB_CLIENT_ID=<your_github_client_id>
 GITHUB_CLIENT_SECRET=<your_github_client_secret>
 
+# Google Gemini AI Configuration (Optional)
+# Get from: https://aistudio.google.com/apikey
+# Note: Users can set their own API key via 'orbit config set'
 GOOGLE_GENERATIVE_AI_API_KEY=<your_gemini_api_key>
 ORBITAI_MODEL=gemini-2.5-flash
 
+# Environment
 NODE_ENV=development
