--- a/server/.env.example
+++ b/server/.env.example
@@ -26,5 +26,13 @@ GITHUB_CLIENT_SECRET=<your_github_client_secret>
 GOOGLE_GENERATIVE_AI_API_KEY=<your_gemini_api_key>
 ORBITAI_MODEL=gemini-2.5-flash
 
+# OpenAI Configuration (Optional)
+OPENAI_API_KEY=<your_openai_api_key>
+OPENAI_MODEL=gpt-4.1-mini
+
+# Anthropic Configuration (Optional)
+ANTHROPIC_API_KEY=<your_anthropic_api_key>
+ANTHROPIC_MODEL=claude-3-5-sonnet-latest
+
 # Environment
 NODE_ENV=development
