--- a/server/package.json
+++ b/server/package.json
@@ -17,10 +17,12 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
-    "@ai-sdk/google": "^2.0.29",
+    "@ai-sdk/anthropic": "^3.0.46",
+    "@ai-sdk/google": "^3.0.30",
+    "@ai-sdk/openai": "^3.0.30",
     "@clack/prompts": "^0.11.0",
     "@prisma/client": "^6.18.0",
-    "ai": "^5.0.89",
+    "ai": "^6.0.95",
     "better-auth": "^1.3.34",
     "boxen": "^8.0.1",
     "chalk": "^5.6.2",
